Font and spacing fixes

--- a/style.css
+++ b/style.css
@@ -94,12 +94,8 @@ footer {
 	margin: 20px 0 0;
 }
 
-main {
-	
-}
-
 form {
-	margin: 40px 0;
+	margin: 40px 40px;
 }
 
 form label, form legend {
@@ -138,7 +134,7 @@ form label, form legend {
 }
 
 table {
-	margin: 20px 0 40px;
+	margin: 20px 40px 40px;
 }
 
 thead {
